cmake_minimum_required(VERSION 3.1)
project(ABC_153)
set(CMAKE_CXX_FLAGS ${CMAKE_CXX_FLAGS} -std=c++14)

add_executable(ABC153_A ABC153_A.cpp)
add_executable(ABC153_B ABC153_B.cpp)
add_executable(ABC153_C ABC153_C.cpp)
add_executable(ABC153_D ABC153_D.cpp)
add_executable(ABC153_E ABC153_E.cpp)
add_executable(ABC153_F ABC153_F.cpp)
