cmake_minimum_required(VERSION 3.1)
project(ABC_156)
set(CMAKE_CXX_FLAGS ${CMAKE_CXX_FLAGS} -std=c++14)

add_executable(ABC156_A ABC156_A.cpp)
add_executable(ABC156_B ABC156_B.cpp)
add_executable(ABC156_C ABC156_C.cpp)
add_executable(ABC156_D ABC156_D.cpp)
add_executable(ABC156_E ABC156_E.cpp)
add_executable(ABC156_F ABC156_F.cpp)
