cmake_minimum_required(VERSION 3.1)
project(keyence_2020)
set(CMAKE_CXX_FLAGS ${CMAKE_CXX_FLAGS} -std=c++14)

add_executable(keyence2020_A keyence2020_A.cpp)
add_executable(keyence2020_B keyence2020_B.cpp)
add_executable(keyence2020_C keyence2020_C.cpp)
add_executable(keyence2020_D keyence2020_D.cpp)
add_executable(keyence2020_E keyence2020_E.cpp)
add_executable(keyence2020_F keyence2020_F.cpp)
